# AI-chat-assistant-

./: .env  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routes/: chat.py  health.py
app/core/: config.py  exceptions.py  logging.py
app/llm/: factory.py  interfaces.py  ollama_client.py
app/prompts/: builder.py
app/retrieval/: chunker.py  document.py  embeddings.py  ingest_markdown.py  loaders.py  vector_store.py
app/services/: chat.py
app/training/: generate_dataset.py  markdown_to_jsonl.py  mlx_train.py
data/: train.jsonl  valid.jsonl
tests/: test_health.py  test_retrieval.py  test_vector_store.py
